tests/compile_errors/import-syntax-error.buzz
// Type mismatch: got type `str`, expected `int`
import "tests/compile_errors/utils/import-syntax-error";

test "imported syntax errors are reported" {}
